# chros

./: .bochsdbgrc  .bochsrc  .gitignore  AUTHORS  BUILDING  COPYING  CREDITS  Makefile  Makefile.in  README  aclocal.m4  configure  configure.ac  debug  fat12.asm  go  init.asm  init.fasm  loader.asm  loader.fasm  make  makefile  makefile.in  myos.asm  print.asm
docs/: bios_addr.txt  mbr.asm
docs/fs/: fat12.txt
include/: gdt.finc  int_key.mac  int_vid.mac  io.finc  mbr.fasm  mbr.finc  ports.finc
include/bios/: bios_int_key.finc  bios_int_vid.finc  bios_io.finc  int_key.finc  int_key.mac  int_vid.finc  int_vid.mac
include/hw/kb/: kb.finc
m4/: ax_prog_fasm.m4  ax_prog_fasm_opt.m4
src/: Makefile  Makefile.am  Makefile.in  gdt.c  gdt.h  init.fasm  inttypes.h  kmain.c  kmain.h  linker.ld  loader.fasm  multiboot.c  multiboot.h  stdint.h  vga.c  vga.h
src/include/: ports.finc
src/include/bios/: bios_int_key.finc  bios_int_vid.finc  bios_io.finc
src/include/hw/kb/: kb.finc
